--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furniture Land Co Ltd - Area25</title>
-    <link rel="stylesheet" href="styleNew.css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body onload="silder()">
 <div class="banner">
     <div class="slinder">
-    <img src="imageNew/img1.jpg" id="slideImg">
+    <img src="images/img1.jpg" id="slideImg">
     </div>
     <div class="overlay">
     <div class="content">
@@ -25,16 +25,16 @@
 <script>
 var sliderImg = document.getElementById("sliderImg");
     var images = new Array(
-         "imageNew/img1.jpg",
-          "imageNew/img2.jpg",
-          "imageNew/img3.jpg",
-          "imageNew/img4.jpg",
-          "imageNew/img5.jpg",
-          "imageNew/img6.jpg",
-          "imageNew/img7.jpg",
-          "imageNew/img8.jpg",
-          "imageNew/img9.jpg",
-         "imageNew/img10.jpg"
+         "images/img1.jpg",
+          "images/img2.jpg",
+          "images/img3.jpg",
+          "images/img4.jpg",
+          "images/img5.jpg",
+          "images/img6.jpg",
+          "images/img7.jpg",
+          "images/img8.jpg",
+          "images/img9.jpg",
+         "images/img10.jpg"
     );
     var len = images.length;
     var i = 0;
